Add back API `user/clearCookie` since frontend is using it for logging out user
